apply from: '../jacoco.gradle'

buildscript {
    repositories {
        mavenCentral()
        maven { url 'https://maven.fabric.io/public' }
    }

    dependencies {
        classpath 'io.fabric.tools:gradle:1.24.2'

        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
        classpath "org.jetbrains.kotlin:kotlin-android-extensions:$kotlin_version"
    }
}

repositories {
    mavenCentral()
    jcenter()
    maven {
        url "https://oss.sonatype.org/content/repositories/snapshots"
    }
    maven { url 'https://maven.fabric.io/public' }
    maven { url "https://jitpack.io" }
    maven { url "https://github.com/alter-ego/Android-RSS-Reader-Library/raw/master/releases/" }
    google()
}

apply plugin: 'com.android.application'
apply plugin: 'kotlin-android'
apply plugin: 'kotlin-android-extensions'
apply plugin: 'kotlin-kapt'

apply plugin: 'io.fabric'

android {
    compileSdkVersion 26
    buildToolsVersion "26.0.1"

    defaultConfig {
        applicationId "solutions.alterego.android.unisannio"
        minSdkVersion 16
        targetSdkVersion 26
        versionCode 2
        versionName "20151214"
        multiDexEnabled true
    }

    signingConfigs {
        release {
            storeFile file("../../android-keystore")
            storePassword ""
            keyAlias "android"
            keyPassword ""
        }
    }

    buildTypes {
        debug {
            testCoverageEnabled = true
        }

        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
            signingConfig signingConfigs.release
        }
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_7
        targetCompatibility JavaVersion.VERSION_1_7
    }

    lintOptions {
        disable 'InvalidPackage'
    }

    packagingOptions {
        exclude 'META-INF/services/javax.annotation.processing.Processor'
        exclude 'META-INF/LICENSE.txt'
        exclude 'META-INF/NOTICE.txt'
    }
    sourceSets {
        main.java.srcDirs += 'src/main/kotlin'
    }

    dexOptions {
        incremental true
        javaMaxHeapSize "4g"
    }

    testOptions {
        unitTests.returnDefaultValues = true

        unitTests.all {
            jvmArgs '-XX:MaxPermSize=256m'
        }
    }
}

androidExtensions {
    experimental = true
}

dependencies {
    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"

    compile 'com.jakewharton.timber:timber:4.5.1'

    implementation "com.android.support:support-v4:$support_libs"
    implementation "com.android.support:appcompat-v7:$support_libs"
    implementation "com.android.support:cardview-v7:$support_libs"
    implementation "com.android.support:recyclerview-v7:$support_libs"
    implementation "com.android.support:design:$support_libs"
    implementation "com.android.support:multidex:1.0.2"
    implementation "com.google.android.gms:play-services-maps:11.4.0"
    implementation "com.google.android.gms:play-services-analytics:11.4.0"

    // Dagger
    implementation 'com.google.dagger:dagger:2.11'
    kapt "com.google.dagger:dagger-compiler:2.11"
    compileOnly 'javax.annotation:jsr250-api:1.0'

    implementation 'org.jsoup:jsoup:1.10.3'

    implementation 'io.reactivex:rxjava:1.3.2'
    implementation 'io.reactivex:rxandroid:1.2.1'

    // Debugging
    implementation 'com.facebook.stetho:stetho:1.5.0'
    implementation 'com.facebook.stetho:stetho-okhttp3:1.5.0'

    releaseImplementation'com.squareup.leakcanary:leakcanary-android-no-op:1.5.1'
    debugImplementation 'com.squareup.leakcanary:leakcanary-android:1.5.1'

    compile('com.crashlytics.sdk.android:crashlytics:2.6.8@aar') {
        transitive = true;
    }

    // UI
    implementation 'com.joanzapata.iconify:android-iconify:2.2.2'
    implementation 'de.hdodenhof:circleimageview:2.1.0'
    implementation 'me.zhanghai.android.customtabshelper:library:1.0.4'

    // Utils
    implementation 'net.danlew:android.joda:2.8.2'

    // Testing
    testCompile "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
    androidTestCompile 'com.google.dexmaker:dexmaker:1.2'
    androidTestCompile 'com.google.dexmaker:dexmaker-mockito:1.2'

    testCompile('junit:junit:4.12') {
        exclude module: 'hamcrest'
        exclude module: 'hamcrest-core'
    }
    testCompile 'org.easytesting:fest-assert-core:2.0M10'
    testCompile('org.mockito:mockito-core:1.10.19') {
        exclude module: 'hamcrest'
        exclude module: 'hamcrest-core'
    }
    testCompile 'org.hamcrest:hamcrest-library:1.3'
}
